--- a/ui.html
+++ b/ui.html
@@ -6,6 +6,7 @@
 <title>BookUI+ V1.0</title>
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="icon" href="icon.png">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
@@ -174,37 +175,22 @@
 <nav>
   <div class="logo">BookUI+ V1.0</div>
   <ul>
+  
     <li class="dropdown">
-      <a>File</a>
+      <a>Credits</a>
       <div class="dropdown-content">
-        <a href="#">New Project</a>
-        <a href="#">Open</a>
-        <a href="#">Save</a>
+        <a href="https://www.youtube.com/@jamesydeveloper">@JamesyDeveloper (YouTube)</a>
+        <a href="https://www.roblox.com/users/4624140937/profile">@JamesyDeveloper (Roblox)</a>
+         <a href="https://github.com/Jamesy-tech">@Jamesy-tech (GitHub)</a>
       </div>
     </li>
-    <li class="dropdown">
-      <a>Edit</a>
-      <div class="dropdown-content">
-        <a href="#">Undo</a>
-        <a href="#">Redo</a>
-        <a href="#">Preferences</a>
-      </div>
-    </li>
-    <li class="dropdown">
-      <a>View</a>
-      <div class="dropdown-content">
-        <a href="#">Timeline</a>
-        <a href="#">Explorer</a>
-        <a href="#">Properties</a>
-      </div>
-    </li>
+ 
 
         <li class="dropdown">
       <a>Help</a>
       <div class="dropdown-content">
-        <a href="#">Timeline</a>
-        <a href="#">Explorer</a>
-        <a href="#">Properties</a>
+        <a href="https://github.com/Jamesy-tech/BookUI">GitHub Repository</a>
+        <a href="https://github.com/Jamesy-tech/BookUI/blob/main/README.md">Documentation</a>
       </div>
     </li>
 
