--- a/index.html
+++ b/index.html
@@ -179,9 +179,9 @@
     <li class="dropdown">
       <a>Credits</a>
       <div class="dropdown-content">
-        <a href="https://www.youtube.com/@jamesydeveloper">@JamesyDeveloper (YouTube)</a>
-        <a href="https://www.roblox.com/users/4624140937/profile">@JamesyDeveloper (Roblox)</a>
-         <a href="https://github.com/Jamesy-tech">@Jamesy-tech (GitHub)</a>
+        <a target="_blank" href="https://www.youtube.com/@jamesydeveloper">@JamesyDeveloper (YouTube)</a>
+        <a target="_blank" href="https://www.roblox.com/users/4624140937/profile">@JamesyDeveloper (Roblox)</a>
+         <a target="_blank" href="https://github.com/Jamesy-tech">@Jamesy-tech (GitHub)</a>
       </div>
     </li>
  
