--- a/bookmarklet.html
+++ b/bookmarklet.html
@@ -1,1 +1,13 @@
-
+<!DOCTYPE NETSCAPE-Bookmark-file-1>
+<!-- This is an automatically generated file.
+     It will be read and overwritten.
+     DO NOT EDIT! -->
+<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF-8">
+<TITLE>Bookmarks</TITLE>
+<H1>Bookmarks</H1>
+<DL><p>
+    <DT><H3 ADD_DATE="1743306730" LAST_MODIFIED="1762407858" PERSONAL_TOOLBAR_FOLDER="true">Bookmarks Bar</H3>
+    <DL><p>
+        <DT><A HREF="javascript:(function(){if(document.getElementById('jamesyBookUIFrame'))return;var c=document.createElement('div');c.id='jamesyBookUIContainer';c.style.position='fixed';c.style.top='50px';c.style.left='50px';c.style.width='600px';c.style.height='400px';c.style.zIndex=999999;c.style.border='1px solid #000';c.style.boxShadow='0%200%2010px%20rgba(0,0,0,0.5)';c.style.resize='both';c.style.overflow='hidden';var%20h=document.createElement('div');h.style.background='#000';h.style.height='30px';h.style.width='100%';h.style.cursor='move';h.style.display='flex';h.style.justifyContent='flex-end';h.style.alignItems='center';var%20x=document.createElement('span');x.innerText='X';x.style.fontFamily='verdana';x.style.color='#fff';x.style.padding='0%2012px';x.style.cursor='pointer';x.onclick=function(){c.remove()};h.appendChild(x);c.appendChild(h);var%20f=document.createElement('iframe');f.id='jamesyBookUIFrame';f.src='https://jamesy-tech.github.io/BookUI';f.style.width='100%';f.style.height='calc(100%%20-%2030px)';f.style.border='none';c.appendChild(f);document.body.appendChild(c);var%20d=false,oX,oY;h.addEventListener('mousedown',function(e){d=true;oX=e.clientX-c.offsetLeft;oY=e.clientY-c.offsetTop;});document.addEventListener('mouseup',function(){d=false});document.addEventListener('mousemove',function(e){if(d){c.style.left=(e.clientX-oX)+'px';c.style.top=(e.clientY-oY)+'px'}})})();" ADD_DATE="1762407858">BookUI</A>
+    </DL><p>
+</DL><p>
