--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <title>BookUI+ V1.0</title>
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="stylesheet" href="style.css">
 <link rel="icon" href="icon.png">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -225,52 +226,7 @@
   <input class="command-input" type="text" placeholder="Enter command and press Enter...">
 </div>
 
-<script>
-const input = document.querySelector('.command-input');
-
-document.querySelectorAll('.dropdown > a').forEach(btn => {
-  btn.addEventListener('click', e => {
-    e.preventDefault();
-    const parent = btn.parentElement;
-    const isOpen = parent.classList.contains('open');
-    document.querySelectorAll('.dropdown').forEach(d => d.classList.remove('open'));
-    if (!isOpen) {
-      parent.classList.add('open');
-      const dropdown = parent.querySelector('.dropdown-content');
-      dropdown.style.left = '0';
-      dropdown.style.right = 'auto';
-      const rect = dropdown.getBoundingClientRect();
-      if (rect.right > window.innerWidth) {
-        dropdown.style.left = 'auto';
-        dropdown.style.right = '0';
-      }
-    }
-  });
-});
-
-document.addEventListener('click', e => {
-  if (!e.target.closest('.dropdown')) {
-    document.querySelectorAll('.dropdown').forEach(d => d.classList.remove('open'));
-  }
-});
-
-document.querySelectorAll('.card').forEach(card => {
-  card.addEventListener('click', () => {
-    input.value = card.getAttribute('data-command');
-    input.focus();
-  });
-});
-
-input.addEventListener('keydown', e => {
-  if (e.key === 'Enter') {
-    try {
-      window.top.eval(input.value);
-    } catch {}
-  //  input.value = '';
-  }
-});
-</script>
-
+<script src="script.js"></script>
 
 </body>
 </html>
