--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>BookUI+ V1.0</title>
+<title>BookUI+</title>
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="stylesheet" href="style.css">
@@ -15,7 +15,7 @@
 <body class="bodyA9">
 
 <nav class="navbarX9">
-  <div class="brandQ3">BookUI+ V1.0</div>
+  <div class="brandQ3" id="nameElementR4">BookUI+</div>
   <ul class="listM2">
     <li class="dropdownR8">
       <a class="linkV1">Credits</a>
