--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>BookUI+</title>
+
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="stylesheet" href="style.css">
 <link rel="icon" href="icon.png">
@@ -16,6 +17,20 @@
 <nav class="navbarX9">
   <div class="brandQ3" id="nameElementR4">BookUI+</div>
   <ul class="listM2">
+
+       <li class="dropdownR8">
+      <a class="linkV1">Theme</a>
+      <div class="dropdownContentL4">
+        <a onclick="switchTheme('blue')">Blue (Default)</a>
+        <a onclick="switchTheme('morning-glow')">Morning Glow</a>
+        <a onclick="switchTheme('red')">Red</a>
+        <a onclick="switchTheme('lime')">Lime</a>
+        <a onclick="switchTheme('green')">Green</a>
+        <a onclick="switchTheme('pink')">Pink</a>
+        <a onclick="switchTheme('cyan')">Cyan</a>
+      </div>
+    </li>
+
     <li class="dropdownR8">
       <a class="linkV1">Credits</a>
       <div class="dropdownContentL4">
@@ -77,11 +92,96 @@
       <p>Click repeatedly at set CPS. Press ESC to stop.</p>
     </div>
 
+    <div class="cardB9" data-command="navigator.clipboard.writeText(window.location.href).then(()=>alert('Page URL copied!'))">
+  <h3>Copy URL</h3>
+  <p>Copy the current page URL to your clipboard.</p>
+</div>
+
+<div class="cardB9" data-command="alert('Viewport size: '+window.innerWidth+'×'+window.innerHeight)">
+  <h3>Viewport Size</h3>
+  <p>Display the current browser window size.</p>
+</div>
+
+<div class="cardB9" data-command="(function(){const s=prompt('Enter text to search:');if(s)window.find(s);})()">
+  <h3>Find Text</h3>
+  <p>Search for text on the current page manually.</p>
+</div>
+
+<div class="cardB9" data-command="(function(){const s=prompt('Enter background color (e.g. red or #ff0000):');if(s)document.body.style.background=s;})()">
+  <h3>Change Background</h3>
+  <p>Temporarily change the background color of the page.</p>
+</div>
+
+<div class="cardB9" data-command="(function(){let s=document.createElement('style');s.textContent='*{transition:all .2s ease!important;transform:rotate(180deg)!important;}';document.head.append(s);setTimeout(()=>s.remove(),2000);})();">
+  <h3>Flip Page</h3>
+  <p>Flip everything on the page upside down for 2 seconds.</p>
+</div>
+
+<div class="cardB9" data-command="(function(){const s=document.createElement('script');s.src='https://unpkg.com/particles.js';document.body.appendChild(s);alert('Particles.js added (if allowed).')})();">
+  <h3>Add Particles</h3>
+  <p>Load a particle animation library into the current page.</p>
+</div>
+
+<div class="cardB9" data-command="alert('You have '+(performance.memory?Math.round(performance.memory.usedJSHeapSize/1048576)+'MB used JS heap':'no memory API available'))">
+  <h3>Memory Info</h3>
+  <p>Show current JavaScript memory usage (if supported).</p>
+</div>
+
+<div class="cardB9" data-command="(function(){let s=prompt('Enter CSS selector to highlight (e.g. img, p, div, * = all):');if(!s)return;document.querySelectorAll(s).forEach(e=>e.style.outline='2px solid red');})();">
+  <h3>Highlight Elements</h3>
+  <p>Highlight all elements matching a given CSS selector.</p>
+</div>
+
+<div class="cardB9" data-command="(function(){alert('You are on: '+location.hostname+'\\nProtocol: '+location.protocol+'\\nPath: '+location.pathname);})();">
+  <h3>Page Info</h3>
+  <p>Display hostname, protocol, and path of the current page.</p>
+</div>
+
+<div class="cardB9" data-command="(function(){document.body.style.filter='grayscale(1)';})();">
+  <h3>Grayscale Mode</h3>
+  <p>Turn the entire page black and white.</p>
+</div>
+
+<div class="cardB9" data-command="(function(){const url=prompt('Replace all images with image URL:','https://placekitten.com/400/300');if(!url)return;document.querySelectorAll('img').forEach(img=>{img.dataset._orig=img.src;img.src=url});alert('All images replaced. Original URLs saved in data-_orig on each image.');})()">
+  <h3>Replace Images</h3>
+  <p>Replace every &lt;img&gt; src on the page with a URL you provide (original saved in data-_orig).</p>
+</div>
+
+<div class="cardB9" data-command="(function(){const from=prompt('Text to find:');if(from===null)return;const to=prompt('Replace with:','');if(to===null)return;const walker=document.createTreeWalker(document.body,NodeFilter.SHOW_TEXT);let n;let count=0;while(n=walker.nextNode()){if(n.nodeValue.includes(from)){n.nodeValue=n.nodeValue.split(from).join(to);count++}}alert('Replaced occurrences in '+count+' text nodes.');})()">
+  <h3>Find & Replace</h3>
+  <p>Do a quick local find-and-replace on visible text nodes (site not changed on server).</p>
+</div>
+
+<div class="cardB9" data-command="(function(){const bar=document.createElement('div');bar.id='fake-admin-bar';bar.style.cssText='position:fixed;left:0;right:0;top:0;padding:10px 16px;background:linear-gradient(90deg,#ffb74d,#f9a825);color:#000;font-weight:700;z-index:99999;text-align:center;box-shadow:0 4px 12px rgba(0,0,0,.6)';bar.textContent=prompt('Banner text:','ADMIN MODE — local preview');const close=document.createElement('button');close.textContent='×';close.style.cssText='position:absolute;right:10px;top:6px;background:transparent;border:0;font-size:18px;cursor:pointer';close.onclick=()=>bar.remove();bar.appendChild(close);document.body.appendChild(bar);window.scrollTo(0,0);})()">
+  <h3>Admin Banner</h3>
+  <p>Add a dismissible banner at the top of the current page you are on.</p>
+</div>
+
+<div class="cardB9" data-command="(function(){const speed=prompt('Auto scroll speed (px per 50ms). Use negative to scroll up','20');if(speed===null)return;let s=Number(speed)||0;if(window.__autoscrollId){clearInterval(window.__autoscrollId);delete window.__autoscrollId;alert('Auto-scroll stopped');return}window.__autoscrollId=setInterval(()=>window.scrollBy(0,s),50);alert('Auto-scroll started — click this card again to stop.');})()">
+  <h3>Auto Scroll</h3>
+  <p>Start/stop a gentle auto-scroll; useful for screenshots or reading long pages.</p>
+</div>
+
+<div class="cardB9" data-command="(function(){if(window.__origFetch) {window.fetch=window.__origFetch;delete window.__origFetch;alert('Fetch restored');return}window.__origFetch=window.fetch;window.fetch=function(){console.log('fetch called with',arguments);return window.__origFetch.apply(this,arguments)};alert('fetch is now being logged to console.')})()">
+  <h3>Log Fetch</h3>
+  <p>Temporarily monkeypatch fetch to log requests in the console (debugging).</p>
+</div>
+
+<div class="cardB9" data-command="(function(){const imgs=Array.from(document.images).map(i=>i.src);if(!imgs.length){alert('No images to list');return}const list=imgs.join('\\n');const w=window.open('about:blank','_blank');w.document.write('<pre>'+list.replace(/&/g,'&amp;')+'</pre>');w.document.title='Image URLs';})()">
+  <h3>List Image URLs</h3>
+  <p>Open a new tab listing every image URL on the page so you can inspect or download them manually.</p>
+</div>
+
+<div class="cardB9" data-command="(function(){const forms=document.querySelectorAll('form');if(!forms.length){alert('No forms found');return}forms.forEach(f=>{f.querySelectorAll('input,textarea,select').forEach(el=>{if(el.type==='email')el.value='user@example.com';else if(el.type==='tel')el.value='0123456789';else if(el.type==='password')el.value='Password123!';else if(el.tagName.toLowerCase()==='select')el.selectedIndex=1;else el.value=el.value||'lorem ipsum';})});alert('Filled forms with dummy data (local only).');})()">
+  <h3>Auto-Fill Forms</h3>
+  <p>Fill form fields with random text depending on what type of input element it is.</p>
+</div>
+
   </div>
 </div>
 
 <div class="inputContainerF1">
-  <input class="commandInputT5" type="text" placeholder="Enter command and press Enter...">
+  <input class="commandInputT5" type="text" placeholder="Excute a command...">
 </div>
 
 <script src="script.js"></script>
