--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
   <p>Add custom CSS to the page instantly.</p>
 </div>
 
-<div class="cardB9" data-command="(function(){const html=prompt('Enter HTML to inject:','<div style=&quot;color:red;font-size:24px&quot;>Hello World!</div>');if(html){const container=document.createElement('div');container.innerHTML=html;document.body.appendChild(container);alert('HTML injected!');}})()">
+<div class="cardB9" data-command="(function(){const html=prompt('Enter HTML to inject:','<div style=&quot;font-size:24px&quot;>Hello World!</div>');if(html){const container=document.createElement('div');container.innerHTML=html;document.body.appendChild(container);alert('HTML injected!');}})()">
   <h3>Inject HTML</h3>
   <p>Add any HTML snippet to the page instantly.</p>
 </div>
@@ -217,4 +217,4 @@
 <script src="script.js"></script>
 
 </body>
-</html>l>
+</html>
