--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       <p>Do a quick find-and-replace on visible text nodes.</p>
     </div>
 
-    <div class="cardB9" data-command="(function(){const bar=document.createElement('div');bar.id='fake-admin-bar';bar.style.cssText='position:fixed;left:0;right:0;top:0;padding:10px 16px;background:linear-gradient(90deg,#ffb74d,#f9a825);color:#000;font-weight:700;z-index:99999;text-align:center;box-shadow:0 4px 12px rgba(0,0,0,.6)';bar.textContent=prompt('Banner text:','ADMIN MODE — local preview');const close=document.createElement('button');close.textContent='×';close.style.cssText='position:absolute;right:10px;top:6px;background:transparent;border:0;font-size:18px;cursor:pointer';close.onclick=()=>bar.remove();bar.appendChild(close);document.body.appendChild(bar);window.scrollTo(0,0);})()">
+    <div class="cardB9" data-command="(function(){const bar=document.createElement('div');bar.id='fake-admin-bar';bar.style.cssText='position:fixed;left:0;right:0;top:0;padding:10px 16px;background:linear-gradient(90deg,#ffb74d,#f9a825);color:#000;font-weight:700;z-index:99999;text-align:center;box-shadow:0 4px 12px rgba(0,0,0,.6)';bar.textContent=prompt('Banner text:','ADMIN MODE');const close=document.createElement('button');close.textContent='×';close.style.cssText='position:absolute;right:10px;top:6px;background:transparent;border:0;font-size:18px;cursor:pointer';close.onclick=()=>bar.remove();bar.appendChild(close);document.body.appendChild(bar);window.scrollTo(0,0);})()">
       <h3>Admin Banner</h3>
       <p>Add a dismissible banner at the top of the current page.</p>
     </div>
