--- a/index.html
+++ b/index.html
@@ -111,11 +111,20 @@
 <p>Add an animated rainbow overlay to the current page you are on.</p>
 </div>
 
+<div class="cardB9" data-command="document.querySelectorAll('*').forEach(e=>e.style.animation='spin 3s linear infinite');let s=document.createElement('style');s.innerHTML='@keyframes spin{0%{transform:rotate(0deg);}100%{transform:rotate(360deg);}}';document.head.appendChild(s);"><h3>Spin Text</h3><p>Spin all text elements.</p></div>
 
     <div class="cardB9" data-command="(function(){const s=prompt('Enter background color (e.g. red or #ff0000):');if(s)document.body.style.background=s;})()">
       <h3>Change Background</h3>
       <p>Temporarily change the background color of the page.</p>
     </div>
+
+    <div class="cardB9" data-command="document.body.style.animation='shake 0.1s infinite';let s=document.createElement('style');s.innerHTML='@keyframes shake{0%{transform:translate(0,0) rotate(0deg)}10%{transform:translate(-10px,10px) rotate(-2deg)}20%{transform:translate(10px,-10px) rotate(2deg)}30%{transform:translate(-15px,15px) rotate(-3deg)}40%{transform:translate(15px,-15px) rotate(3deg)}50%{transform:translate(-20px,20px) rotate(-4deg)}60%{transform:translate(20px,-20px) rotate(4deg)}70%{transform:translate(-15px,15px) rotate(-3deg)}80%{transform:translate(15px,-15px) rotate(3deg)}90%{transform:translate(-10px,10px) rotate(-2deg)}100%{transform:translate(0,0) rotate(0deg)}}';document.head.appendChild(s);">
+<h3>Shake Page</h3>
+<p>Intense camera shake effect.</p>
+</div>
+
+
+
 
     <div class="cardB9" data-command="(function(){let s=document.createElement('style');s.textContent='*{transition:all .2s ease!important;transform:rotate(180deg)!important;}';document.head.append(s);setTimeout(()=>s.remove(),2000);})();">
       <h3>Flip Page</h3>
